// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message without a community name after clicking submit 1`] = `
<KeyboardFriendlyView>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Lets get started!
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    All good things start somewhere! Lets kick things off with a catchy name for your community.
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Whats the name of your community?
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      returnKeyType="next"
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <View>
    <View>
      <View />
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Please enter a community name
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Continue
        </Text>
      </View>
    </View>
  </View>
</KeyboardFriendlyView>
`;

exports[`matches last snapshot 1`] = `
<KeyboardFriendlyView>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Lets get started!
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    All good things start somewhere! Lets kick things off with a catchy name for your community.
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Whats the name of your community?
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      returnKeyType="next"
      underlineColorAndroid="rgba(0,0,0,0)"
      value={undefined}
    />
  </View>
  <Button
    onPress={[Function]}
    text="Continue"
  />
</KeyboardFriendlyView>
`;
